--- a/home.html
+++ b/home.html
@@ -1,3 +1,34 @@
-<html>
-    
+<!DOCTYPE HTML>
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Amine Kaddam">
+    <meta name="keywords" content="HTML,CSS,PHP,JavaScript">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?
+   family=Quickstand:500" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta name="description" content="GVVV">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+</head>
+
+<body>
+    <form
+     action="./charge.php" method = post id= "payment-form"></form>
+    <div class="form row"></div>
+    <label for = "card-element" class="form-control"></label>
+
+<div id="card-errors" role ="alert"></div>
+
+</div>
+
+    <button> Submit Payment </button>
+</form>
+</div>
+
 </html>
