--- a/home.html
+++ b/home.html
@@ -3,17 +3,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Amine Kaddam">
-    <meta name="keywords" content="HTML,CSS,PHP,JavaScript">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?
-   family=Quickstand:500" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <meta name="description" content="GVVV">
-    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 
@@ -24,11 +13,21 @@
     <label for = "card-element" class="form-control"></label>
 
 <div id="card-errors" role ="alert"></div>
-
-</div>
-
-    <button> Submit Payment </button>
-</form>
-</div>
-
+    <div>
+        <label for="name">Name</label>
+        <input type="text">
+    </div>
+    <div>
+        <label for="cc-number">Credit Card Number</label>
+        <input id="cc-number" type="text">
+    </div>
+    <div>
+        <label for="expiry">Expiration</label>
+        <input id="expiry" type="text">
+    </div>
+    <div>
+        <button> Submit Payment </button>
+    </form>
+    </div>
+    </body>
 </html>
