--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 
 <body>
@@ -12,22 +13,29 @@
     <div class="form row"></div>
     <label for = "card-element" class="form-control"></label>
 
-<div id="card-errors" role ="alert"></div>
+<div id="blok" role ="alert">
     <div>
         <label for="name">Name</label>
+        <br>
         <input type="text">
     </div>
+    <br>
     <div>
         <label for="cc-number">Credit Card Number</label>
+        <br>
         <input id="cc-number" type="text">
     </div>
+    <br>
     <div>
         <label for="expiry">Expiration</label>
+        <br>
         <input id="expiry" type="text">
     </div>
+    <br>
     <div>
         <button> Submit Payment </button>
     </form>
+    </div>
     </div>
     </body>
 </html>
