--- a/home.html
+++ b/home.html
@@ -21,13 +21,13 @@
     </div>
     <br>
     <div>
-        <label for="cc-number">Credit Card Number</label>
+        <label for="cc-number">E-mail</label>
         <br>
         <input id="cc-number" type="text">
     </div>
     <br>
     <div>
-        <label for="expiry">Expiration</label>
+        <label for="expiry">Credit Card Number</label>
         <br>
         <input id="expiry" type="text">
     </div>
